# HW_7

./: config.ini  my_select.py  pyproject.toml
conf/: db.py  models.py
migrations/: env.py
migrations/versions/: 7bdcd4d0474b_init.py
