[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Anastasia <ashevchenko629@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
faker = "^22.0.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
conf = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
